Compressed image assets

--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -1,24 +1,24 @@
 *
 !posters/
-!posters/Dark-Knight.jpg
-!posters/Dark-Knight.jpg
-!posters/Die-Hard.jpg
-!posters/Fight_Club.jpg
-!posters/Forrest-Gump.jpg
-!posters/Goodfellas.jpg
-!posters/Grand-Budapest-Hotel.jpg
-!posters/Hangover.jpg
-!posters/Inception.jpg
-!posters/Interstellar.jpg
-!posters/John-Wick.jpg
-!posters/Lord_of_the_rings.jpg
-!posters/Se7en.jpg
-!posters/Shawshank.jpg
-!posters/The_Godfather.jpg
-!posters/The_Matrix.jpg
-!posters/The-Conjuring.jpg
-!posters/The-Exorcist.jpg
-!posters/The-Fault-in-Our-Stars.jpg
-!posters/The-Notebook.jpg
-!posters/Titanic.jpg
+!posters/Dark-Knight.webp
+!posters/Dark-Knight.webp
+!posters/Die-Hard.webp
+!posters/Fight_Club.webp
+!posters/Forrest-Gump.webp
+!posters/Goodfellas.webp
+!posters/Grand-Budapest-Hotel.webp
+!posters/Hangover.webp
+!posters/Inception.webp
+!posters/Interstellar.webp
+!posters/John-Wick.webp
+!posters/Lord_of_the_rings.webp
+!posters/Se7en.webp
+!posters/Shawshank.webp
+!posters/The_Godfather.webp
+!posters/The_Matrix.webp
+!posters/The-Conjuring.webp
+!posters/The-Exorcist.webp
+!posters/The-Fault-in-Our-Stars.webp
+!posters/The-Notebook.webp
+!posters/Titanic.webp
 !.gitignore
